feat(continual-running): refactor api.
- 完善编译打包方式
- 更新为复用 Worker 的模式

Signed-off-by: Lenic <Lenic@live.cn>

--- a/example/config/index.html
+++ b/example/config/index.html
@@ -9,6 +9,10 @@
       pre {
         font-family: Consolas;
       }
+
+      li {
+        line-height: 2;
+      }
     </style>
   </head>
 
@@ -17,9 +21,13 @@
       <div>
         <input id="btnWhite" type="button" value="clear" />
         <input id="btnForEach" type="button" value="forEach" />
+        <input id="btnForEach2" type="button" value="forEach2" />
         <input id="btnMap" type="button" value="map" />
+        <input id="btnMap2" type="button" value="map2" />
         <input id="btnReduce" type="button" value="reduce" />
+        <input id="btnReduce2" type="button" value="reduce2" />
         <input id="btnReduceRight" type="button" value="reduceRight" />
+        <input id="btnReduceRight2" type="button" value="reduceRight2" />
       </div>
       <div>
         <ol id="olList"></ol>
